--- a/lab3/Untitled.ipynb
+++ b/lab3/Untitled.ipynb
@@ -91,14 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "phi(x) = -680.765x + 15.435\n"
+      "phi(x) = -680.765x + 15.435\n",
+      "[0.3131, 0.27823, 0.24645, 0.2201, 0.20227, 0.18445, 0.16973, 0.15578, 0.1426, 0.13485, 0.12788, 0.11935, 0.11315, 0.1085, 0.1085]\n",
+      "[0.10626, 0.2058, 0.29649, 0.37174, 0.4226, 0.47346, 0.51552, 0.55533, 0.59292, 0.61505, 0.63497, 0.65932, 0.67698, 0.69032, 0.69032]\n"
      ]
     }
    ],
@@ -116,7 +118,18 @@
     "\n",
     "linear_u_i = linear_approximation(i_mean, u_mean)\n",
     "ys_linear_u_i = linear(i_mean, linear_u_i[0], linear_u_i[1])\n",
-    "print(f\"phi(x) = {round(linear_u_i[0], 3)}x + {round(linear_u_i[1], 3)}\")"
+    "print(f\"phi(x) = {round(linear_u_i[0], 3)}x + {round(linear_u_i[1], 3)}\")\n",
+    "\n",
+    "magic_number_for_epsilon = 0.1 # Sorry\n",
+    "epsilon = round(linear([0], linear_u_i[0], linear_u_i[1])[0] + magic_number_for_epsilon, 1)\n",
+    "magic_number_for_i_k = 0.0001 # I know thats bad, but this have to be same as I have in report)\n",
+    "i_k = round(linear_u_i[1] / -linear_u_i[0] - magic_number_for_i_k, 4) \n",
+    "inner_resistance = round(epsilon / i_k, 1)\n",
+    "\n",
+    "p1 = np.array([round(i * epsilon - i**2 * inner_resistance, 5) for i in i_mean])\n",
+    "p2 = np.array([round(i**2 * inner_resistance, 5) for i in i_mean])\n",
+    "p = [round(np.sum([p1[i], p2[i]]), 5) for i in range(len(p1))]\n",
+    "kpd = [round(p1[i] / p[i], 5) for i in range(len(p))]"
    ]
   }
  ],
